fix: Align elements

--- a/src/components/Main/style.css
+++ b/src/components/Main/style.css
@@ -7,6 +7,7 @@ main {
 
 .main-intro {
 	display: flex;
+	align-items: center;
 	gap: 190px;
 	padding: 100px 162px;
 	width: 100%;
